--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,58 @@
-name: Build Web Server
-
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run linting
-      run: npm run lint
-
-    - name: Build application
-      run: npm run build
-
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-files
-        path: .next/
-        retention-days: 7
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                cache: npm
+                node-version: "20"
+            - name: Install dependencies
+              run: npm ci
+            - name: Run linting
+              run: npm run lint
+            - name: Build application
+              run: npm run build
+            - name: Download build artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: build-files
+                path: ./
+            - env:
+                BP_PASSWORD: ${{ secrets.BP_PASSWORD }}
+                BP_USER: ${{ secrets.BP_USER }}
+              id: beforeprod
+              name: Deploy to beforeprod.com
+              uses: beforeprod-com/preview-deployment-action@v0.10.0
+              with:
+                build_folder: .next
+                platform: JS
+            - if: github.event_name == 'pull_request'
+              name: Comment PR with preview URL
+              uses: actions/github-script@v7
+              with:
+                script: |
+                    github.rest.issues.createComment({
+                      issue_number: context.issue.number,
+                      owner: context.repo.owner,
+                      repo: context.repo.repo,
+                      body: '**Preview Deployment Ready!**\n\nYour preview is now available at: **' + '${{ steps.beforeprod.outputs.url }}' + '**\n\nThis preview will be automatically cleaned up when the PR is closed.'
+                    })
+            - name: Upload build artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                name: build-files
+                path: .next/
+                retention-days: 7
+name: Build Web Server
+"on":
+    pull_request:
+        branches:
+            - main
+            - master
+    push:
+        branches:
+            - main
+            - master
